--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,7 @@
 /* Navigation Start */
 @import url(./external/navigation.css);
 
-/* Navigation End */
-
 /* Hero Section Start */
+@import url(./external/hero-section.css);
 
 /* Hero Section End */
