responsive hero section

--- a/assets/css/external/common.css
+++ b/assets/css/external/common.css
@@ -28,6 +28,11 @@ body {
   /*  */
 }
 
+.space {
+  padding-top: 140px;
+  padding-bottom: 140px;
+}
+
 /* button */
 .btn-callToAction {
   font-size: 16px;
