--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -37,6 +37,12 @@
     margin-top: 15px;
     justify-content: center;
   }
-
   /* Hero section End */
+  /* Featured Section Start */
+  .featured-cards {
+    padding-left: 15px;
+    padding-right: 15px;
+    flex-wrap: wrap;
+  }
+  /* Featured Section End */
 }
