--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,4 +9,5 @@
 /* Featured Section */
 @import url(./external/featured-section.css);
 
+/* Product Section */
 @import url(./external/product-section.css);
