--- a/assets/css/external/product-section.css
+++ b/assets/css/external/product-section.css
@@ -3,3 +3,44 @@
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   gap: 30px;
 }
+.promo-banner {
+  background: #b0e123;
+  margin-top: 140px;
+  padding-left: 55px;
+  font-family: var(--title-font);
+}
+.promo-banner .promo-title {
+  color: #fff;
+  font-size: 60px;
+  font-weight: 500;
+  text-transform: uppercase;
+  line-height: 1.2;
+  padding: 33px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.promo-banner .promo-title > p > span {
+  color: #fffc01;
+}
+.promo-banner .promo-title > a {
+  font-size: 20px;
+  color: #fff;
+  display: block;
+  padding-top: 5px;
+}
+.promo-banner .promo-tagline {
+  padding: 20px 50px;
+  font-weight: 600;
+  font-size: 46px;
+  color: #fff;
+}
+
+.promo-banner .promo-img {
+  padding: 0;
+}
+.promo-banner .promo-img img {
+  margin-left: 12px;
+  object-fit: cover;
+  width: 100%;
+}
