--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,6 @@
 
 /* Product Section */
 @import url(./external/product-section.css);
+
+/* About Section */
+@import url(./external/about-section.css);
