--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,6 @@
 
 /* About Section */
 @import url(./external/about-section.css);
+
+/* Service Section */
+@import url(./external/service-section.css);
