--- a/assets/css/external/featured-product-section.css
+++ b/assets/css/external/featured-product-section.css
@@ -26,7 +26,9 @@
   display: flex;
   justify-content: center;
   gap: 50px;
+  row-gap: 20px;
   margin-bottom: 50px;
+  flex-wrap: wrap;
 }
 .featured-products .product-filter .filter-item a {
   color: var(--primary-color);
