--- a/assets/css/external/hero-section.css
+++ b/assets/css/external/hero-section.css
@@ -1,6 +1,5 @@
 .hero-fluid {
-  /* background-color: var(--light-gray); */
-  background-color: rgb(94, 42, 42);
+  background-color: var(--light-gray);
   position: relative;
   z-index: 1;
 }
@@ -19,6 +18,7 @@
   left: 0;
   top: 0;
   max-width: 280px;
+  z-index: -1;
 }
 .hero-content {
   padding: 210px 0;
